--- a/style.css
+++ b/style.css
@@ -16,10 +16,31 @@ body {
 .main-card {
     background-color: hsl(0, 0%, 12%);
     max-width: 400px;
-    border-radius: 8px;
-    padding: 15px;
+    border-radius: 10px;
+    padding: 18px;
 }
 
 .link {
     display: block;
+    color: #fff;
+    background-color: hsl(0, 0%, 20%);
+    text-decoration: none;
+    max-width: 100%;
+    margin-top: 12px;
+    text-align: center;
+    padding: 8px;
+    border-radius: 8px;
+}
+
+.profile {
+    text-align: center;
+}
+
+.profile__pic {
+    border-radius: 50%;
+    width: 35%;
+}
+
+.local {
+    color: hsl(75, 94%, 57%);
 }
