Add spacing between texts and set the font size

--- a/style.css
+++ b/style.css
@@ -30,17 +30,38 @@ body {
     text-align: center;
     padding: 8px;
     border-radius: 8px;
+    font-weight: 600;
+}
+
+.link:hover {
+    background-color: hsl(75, 94%, 57%);
 }
 
 .profile {
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .profile__pic {
     border-radius: 50%;
     width: 35%;
+    margin-bottom: 17px;
 }
 
 .local {
     color: hsl(75, 94%, 57%);
+    font-weight: 600;
+}
+
+.profile__bio {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.user-name {
+    font-weight: 700;
+}
+
+.profile__info {
+    margin-bottom: 20px;
 }
